--- a/css/styles.css
+++ b/css/styles.css
@@ -1,146 +1,149 @@
 /* general styles */
-html {
-  font-family: 'Open Sans', sans-serif;
-  padding: 0;
-  margin: 0;
-}
+  html {
+    font-family: 'Open Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+  }
 
-/*header styles */
-header {
-  font-family: 'Oswald', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 22vh;
-  margin-bottom: 5px;
-  background-color: #63A46C;
-  box-shadow: 1px 1px 1px grey;
-}
+  /*header styles */
+  header {
+    font-family: 'Oswald', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 22vh;
+    margin-bottom: 5px;
+    background-color: #63A46C;
+    box-shadow: 1px 1px 1px grey;
+  }
 
-header img {
-  max-height: 100px;
-  padding-right: 1%;
-  align-self: center;
-}
+  header img {
+    max-height: 100px;
+    padding-right: 1%;
+    align-self: center;
+  }
 
-.tagline {
-  align-items: center;
-}
+  .tagline {
+    align-items: center;
+  }
 
-.tagline h1 {
-  margin: 0;
-  font-size: 55px;
-}
+  .tagline h1 {
+    margin: 0;
+    font-size: 55px;
+  }
 
-.tagline h3 {
-  margin: 0;
-  font-size: 35px;
-  padding-left: 4%;
-}
+  .tagline h3 {
+    margin: 0;
+    font-size: 35px;
+    padding-left: 4%;
+  }
 
-/* filter bar styles */
+  /* filter bar styles */
 
-.filter-memo {
-  background-color: #F2C078;
-  height: 4.2vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 8px;
-  flex-wrap: wrap;
-}
+  .filter-memo {
+    background-color: #F2C078;
+    height: 4.2vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    flex-wrap: wrap;
+  }
 
 
-.filter-memo h4 {
-  margin: 0;
-  font-size: 30px;
-  padding-left: 16px;
-  font-weight: normal;
-}
+  .filter-memo h4 {
+    margin: 0;
+    font-size: 30px;
+    padding-left: 16px;
+    font-weight: normal;
+  }
 
-#results-by {
-  color: #DF3B57;
-  font-weight: bold;
-  padding-left: 2px;
-}
+  #results-by {
+    color: #DF3B57;
+    font-weight: bold;
+    padding-left: 2px;
+  }
 
-.filter-memo button {
-  height: 3vh;
-  width: 23vw;
-  margin-right: 8px;
-  background-color: #63a46cb8;
-  font-size: 30px;
-  border-radius: 3px;
-  border: 1px solid black;
-  box-shadow: 1px 1px 1px black;
-}
+  .filter-memo button {
+    height: 3vh;
+    width: 23vw;
+    margin-right: 8px;
+    background-color: #63a46cb8;
+    font-size: 30px;
+    border-radius: 3px;
+    border: 1px solid black;
+    box-shadow: 1px 1px 1px black;
+  }
 
-.filter-bar {
-  background-color: #C2B2B4;
-  display: none;
-}
+  .filter-bar {
+    background-color: #C2B2B4;
+    display: none;
+  }
 
- #filter-bar-lead {
-   padding: 4%;
-   margin: 0;
-   margin-bottom: 2px;
-   text-align: center;
-   font-size: 36px;
-   font-weight: bold;
-   border-radius: 5px;
-   background-color: #f2c078cf;
- }
+   #filter-bar-lead {
+     padding: 4%;
+     margin: 0;
+     margin-bottom: 2px;
+     text-align: center;
+     font-size: 36px;
+     font-weight: bold;
+     border-radius: 5px;
+     background-color: #f2c078cf;
+   }
 
-.open-bar {
-  display: block;
-  height: 43vh;
-  width: 100%;
-  justify-content: center;
-  border-top: 3px solid black;
-  border-radius: 5px;
-}
+  .open-bar {
+    display: block;
+    height: 50vh;
+    width: 100%;
+    justify-content: center;
+    border-radius: 5px;
+  }
 
-.filter-bar select {
-  font-size: 36px;
-  padding: 13px;
-  height: 4vh;
-  width: 97%;
-  background-color: #efebeb;
-  margin: 1%;
-  border-radius: 10px;
-  border: 1px solid black;
-}
+  .filter-bar select {
+    font-size: 25px;
+    padding: .5%;
+    height: 4vh;
+    width: 97%;
+    background-color: #efebeb;
+    margin: 1%;
+    border-radius: 10px;
+    border: 1px solid black;
+  }
 
-.filter-bar button {
-  display: block;
-  margin: auto;
-  margin-top: 23px;
-  font-size: 36px;
-  text-align: center;
-  width: 60%;
-  height: 4vh;
-  border-radius: 10px;
-  border: 3px solid black;
-  box-shadow: 1px 1px 1px black;
-  background-color: #F2C078;
-}
+  .filter-bar button {
+    display: block;
+    margin: auto;
+    margin-top: 3%;
+    font-size: 36px;
+    text-align: center;
+    width: 60%;
+    height: 10%;
+    border-radius: 10px;
+    border: 3px solid black;
+    box-shadow: 1px 1px 1px black;
+    background-color: #F2C078;
+  }
 
-/* display body styles */
-.cards ul{
-  background-color: #d8a47f7a;
-  list-style: none;
-  border-radius: 7px;
-  padding: 24px;
-  box-shadow: 1px 1px 1px grey;
-}
+  /* display body styles */
+  .cards div {
+    background-color: #d8a47f7a;
+    border-radius: 7px;
+    padding: 24px;
+    margin: 15px;
+    box-shadow: 1px 1px 1px grey;
+  }
 
-.cards li {
-  font-size: 16px;
-  line-height: 50px;
-}
+  .cards li {
+    font-size: 16px;
+    line-height: 50px;
+  }
 
-#cat-result-display li {
-  font-size: 35px;
-  line-height: 59px;
-}
+  .cards ul {
+    list-style: none;
+  }
+
+  #cat-result-display li {
+    font-size: 35px;
+    line-height: 59px;
+  }
